--- a/Task_2_1_1/build.gradle
+++ b/Task_2_1_1/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'OOP'
-version '1.0'
+//version '1.0'
 
 sourceCompatibility = 1.8
 
@@ -12,6 +13,21 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.json', name: 'json', version: '20190722'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    compile 'info.picocli:picocli:4.2.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+jar {
+    archivesBaseName = 'Pizzeria'
+
+    manifest {
+        attributes 'Main-Class': 'ru.nsu.fit.markelov.PizzeriaApplication'
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+mainClassName = 'ru.nsu.fit.markelov.PizzeriaApplication'
