--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Task_2_1_1/log.txt
 Task_2_1_1/simpleLog.txt
 Task_2_1_1/singletonLog.txt
 Task_2_1_1/staticLog.txt
+Task_2_1_1/src/test/resources/testLog.txt
