--- a/hellofx/build.gradle
+++ b/hellofx/build.gradle
@@ -9,7 +9,15 @@ repositories {
 
 javafx {
     version = "13"
-    modules = [ 'javafx.controls' ]
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
-mainClassName = 'HelloFX'
+dependencies {
+    compile group: 'org.json', name: 'json', version: '20190722'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+group 'OOP'
+version '1.0'
+
+mainClassName = 'ru.nsu.fit.markelov.SnakeGame'
