build.gradle fix

--- a/Task_2_3_1/build.gradle
+++ b/Task_2_3_1/build.gradle
@@ -1,5 +1,8 @@
-apply plugin: 'groovy'
-version = 1.0
+plugins {
+    id 'groovy'
+    id 'java'
+    id 'application'
+}
 
 repositories {
     mavenCentral()
@@ -9,3 +12,7 @@ dependencies {
     implementation 'org.codehaus.groovy:groovy-all:3.0.3'
     testImplementation 'junit:junit:4.12'
 }
+
+//version = 1.0
+
+mainClassName = 'ru.nsu.fit.markelov.Main'
