--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Task_2_1_1/simpleLog.txt
 Task_2_1_1/singletonLog.txt
 Task_2_1_1/staticLog.txt
 Task_2_1_1/src/test/resources/testLog.txt
+Task_2_3_1/report.html
