--- a/Task_2_3_1/build.gradle
+++ b/Task_2_3_1/build.gradle
@@ -13,6 +13,21 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 
-//version = 1.0
+jar {
+    archivesBaseName = 'dsl'
+
+    manifest {
+        attributes 'Main-Class': 'ru.nsu.fit.markelov.Main'
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+group 'OOP'
+//version '1.0'
+
+sourceCompatibility = 1.8
 
 mainClassName = 'ru.nsu.fit.markelov.Main'
